--- a/application.json
+++ b/application.json
@@ -16,6 +16,9 @@
   "unpublishedAppLayout": {
     "type": "DESKTOP"
   },
+  "publishedAppLayout": {
+    "type": "DESKTOP"
+  },
   "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
