--- a/application.json
+++ b/application.json
@@ -7,6 +7,10 @@
     {
       "id": "Rating and Genre Search",
       "isDefault": false
+    },
+    {
+      "id": "Profile",
+      "isDefault": false
     }
   ],
   "viewMode": false,
