--- a/application.json
+++ b/application.json
@@ -11,6 +11,10 @@
     {
       "id": "Profile",
       "isDefault": false
+    },
+    {
+      "id": "Page1",
+      "isDefault": false
     }
   ],
   "viewMode": false,
