System generated commit, after creating a new branch: tyler5

--- a/application.json
+++ b/application.json
@@ -7,6 +7,14 @@
     {
       "id": "Leave A Review ",
       "isDefault": false
+    },
+    {
+      "id": "put_log",
+      "isDefault": false
+    },
+    {
+      "id": "delete_log",
+      "isDefault": false
     }
   ],
   "viewMode": false,
