System generated commit, after creating a new branch: tyler_6

--- a/application.json
+++ b/application.json
@@ -15,6 +15,10 @@
     {
       "id": "delete_log",
       "isDefault": false
+    },
+    {
+      "id": "Profile",
+      "isDefault": false
     }
   ],
   "viewMode": false,
